# corvus

./: .env.example  .gitignore  README.md  pyproject.toml
src/domain/: agent_service.py  exceptions.py  models.py
src/infrastructure/: google_form_parser.py  http_form_submitter.py  openai_generator.py
src/interfaces/: ports.py
src/presentation/: cli.py
tests/: test_openai_generator.py
