[project]
name = "corvus"
version = "0.1.0"
description = "An AI-powered agentic tool to programmatically parse, answer, and submit Google Forms based on custom user personas."
readme = "README.md"
authors = [{ name = "Fatih Celik" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "openai>=2.37.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "pytest>=8.0.0",
]
